# cuda-lane-detection

./: .gitignore  CMakeLists.txt  Dockerfile  HoughTransform.cu  LaneDetection.cpp  Line.cpp  Line.h  Preprocessing.cpp  README.md  commons.h  manifest.xml  set_ros_warthog.sh
bash/: compile_cuda.sh  compile_lanedet.sh  run_lanedet.sh  start_docker.sh
calibrations/0/: calib_os1_to_cam3.yaml
calibrations/1/: calib_cam1_intrinsics.yaml  calib_cam4_intrinsics.yaml  calib_os1_to_cam1.yaml  calib_os1_to_cam2.yaml
calibrations/44/: calib_cam0_to_cam1.yaml
calibrations/45/: calib_cam2_intrinsics.yaml  calib_cam3_intrinsics.yaml  calib_os1_to_cam0.yaml  calib_os1_to_cam4.yaml
config/: leva.yaml
vis/: vis_rviz.py
